--- a/src/app/hello/hello.component.html
+++ b/src/app/hello/hello.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-    <h2>{{ title }}</h2>
-    <img [src]="imageUrl" alt="Welcome Poster">
-    <p>{{ createdAt  }}</p>
-    <p>{{ description }}</p>
-    <button (click)="showMessage()">Click Me</button>
-    <p>{{ message }}</p>
-  </div>
+  <h2>{{ title }}</h2>
+  <img [src]="imageUrl" alt="Welcome Poster">
+  <p>{{ createdAt  }}</p>
+  <p>{{ description }}</p>
+  <button (click)="showMessage()">Click Me</button>
+  <p *ngIf="message" @fadeIn>{{ message }}</p> <!-- Animation appliquée ici -->
+  <p>Button clicked {{ clickCount }} times.</p>
+</div>
